This file is here to allow devs to easily add stuff in the release
notes for the next release, it allows easy syncing with the release
team, since you don't have to be around when the release takes
place...

Just dump whatever you want to have mentioned in the release notes here. Please
take care that it is in a way that allows copy&paste to the release notes. That
is making sure that spelling/grammer/whatever is usable and that you are using
 complete sentences, not just single words.

The release team should empty this file after each release.

***

The advanceto key in [unit_type] was changed to advances_to, as internally it
is immediately renamed to advances_to and used that way in both unit.cpp and
unit_types.cpp, along with being the key that is actually used in [unit],
thus being what *should* be edited in stored units.

The advanceto key is now deprecated and will be removed in 1.5.6, 
wmllint can make the required changes.

***

Building Wesnoth now requires fontconfig 2.4.2 or higher (only tested with
2.6.0). This dependency was already needed for using pango so no new runtime
requirements are added.

***