@@ -64,6 +64,8 @@ Version 1.5.3+svn:
      triggering of a matching "turn *" event).
    * Removed the compiler work arounds for MSVC6.
    * Added some more compiler workarounds for MSVC9.
+   * Removed the --small-gui build option, starting Wesnoth with the
+     --smallgui parameter achieves the same
 
 Version 1.5.3:
  * Campaigns
